--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -1,7 +1,7 @@
 namePrefix: capbm-
 
 commonLabels:
-  cluster.x-k8s.io/provider: "infrastructure-baremetal"
+  cluster.x-k8s.io/provider: "infrastructure-metal3"
 
 bases:
 - crd
