Modify deployment to rename to CAPM3

--- a/examples/provider-components/manager_tolerations_patch.yaml
+++ b/examples/provider-components/manager_tolerations_patch.yaml
@@ -2,8 +2,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: capbm-controller-manager
-  namespace: capbm-system
+  name: capm3-controller-manager
+  namespace: capm3-system
 spec:
   template:
     spec:
