--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 # Adds namespace to all resources.
-namespace: capbm-system
+namespace: capm3-system
 
 resources:
 - namespace.yaml
