Change shortnames to m3c and m3m

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
@@ -16,8 +16,8 @@ spec:
     listKind: Metal3ClusterList
     plural: metal3clusters
     shortNames:
-    - bmc
-    - bmcluster
+    - m3c
+    - m3cluster
     singular: metal3cluster
   scope: Namespaced
   versions:
