--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -16,8 +16,8 @@ spec:
     listKind: Metal3MachineList
     plural: metal3machines
     shortNames:
-    - bmm
-    - bmmachine
+    - m3m
+    - m3machine
     singular: metal3machine
   scope: Namespaced
   versions:
