Add metadata process
- Add Metal3Metadata object including webhook setup and Metal3Machine
  changes
- add reconciliation controller and metadata manager
- add templating function for metadata rendering
- add documentation

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -88,6 +88,26 @@ rules:
   - patch
   - update
 - apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
+  - metal3metadatas
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
+  - metal3metadatas/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - metal3.io
   resources:
   - baremetalhosts
