--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -12,6 +12,8 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3metadatas.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3metadatastatuses.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -20,6 +22,8 @@ patchesStrategicMerge:
 - patches/webhook_in_metal3machines.yaml
 - patches/webhook_in_metal3clusters.yaml
 - patches/webhook_in_metal3machinetemplates.yaml
+- patches/webhook_in_metal3metadatas.yaml
+- patches/webhook_in_metal3metadatastatuses.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -27,6 +31,8 @@ patchesStrategicMerge:
 - patches/cainjection_in_metal3machines.yaml
 - patches/cainjection_in_metal3clusters.yaml
 - patches/cainjection_in_metal3machinetemplates.yaml
+- patches/cainjection_in_metal3metadatas.yaml
+- patches/cainjection_in_metal3metadatastatuses.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
