--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -27,3 +27,15 @@ patchesJson6902:
     kind: CustomResourceDefinition
     name: metal3machinetemplates.infrastructure.cluster.x-k8s.io
   path: patch_crd_webhook_namespace.yaml
+- target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
+    name: metal3metadatas.infrastructure.cluster.x-k8s.io
+  path: patch_crd_webhook_namespace.yaml
+- target:
+    group: apiextensions.k8s.io
+    version: v1
+    kind: CustomResourceDefinition
+    name: metal3metadatastatuses.infrastructure.cluster.x-k8s.io
+  path: patch_crd_webhook_namespace.yaml
