--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -63,6 +63,25 @@ webhooks:
     - UPDATE
     resources:
     - metal3machinetemplates
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha4-metal3metadata
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: default.metal3metadata.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha4
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - metal3metadatas
 
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
@@ -128,3 +147,22 @@ webhooks:
     - UPDATE
     resources:
     - metal3machinetemplates
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha4-metal3metadata
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: validation.metal3metadata.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha4
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - metal3metadatas
